--- a/src/Pages/css/Survey.css
+++ b/src/Pages/css/Survey.css
@@ -1,6 +1,7 @@
 .surveyForm {
-  width: 25em;
-  height: 25em;
+  width: 90%; 
+  max-width: 600px; 
+  height: auto; 
   background-color: #fffbf5;
   backdrop-filter: blur(10px);
   box-shadow: 0px 0px 25px #d5deff;
@@ -9,14 +10,6 @@
   margin: 5% auto;
   padding: 2%;
   transition: 0.3s;
-}
-
-.slide-left {
-  transform: translateX(-100%);
-}
-
-.slide-right {
-  transform: translateX(100%);
 }
 
 .formTitle {
@@ -33,27 +26,22 @@
 
 .question {
   font-size: 1.2rem;
-  max-width: fit-content;
-  min-height: 7rem;
+  max-width: 90%; 
   text-align: center;
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4rem;
+  margin: 4rem auto 0 auto;
 }
 
 .numbersMain {
   display: flex;
   flex-direction: row;
   max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1rem;
+  margin: 1rem auto;
 }
 
 .numbers {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 2rem; 
+  height: 2rem;
   background-color: #d5deff;
   border-radius: 50%;
   margin: 5px 5px;
@@ -73,7 +61,7 @@
 
 .userTextInput {
   width: 100%;
-  height: 2rem;
+  height: 2.5rem;
   font-size: 1rem;
   border: 2px solid black;
   border-radius: 5px;
@@ -81,13 +69,14 @@
 
 .buttons {
   display: flex;
-  margin: 10% auto;
+  margin: 5% auto;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .button {
-  width: 8rem;
+  width: 100%; 
+  max-width: 8rem; 
   height: 3rem;
   font-size: 1rem;
   background-color: white;
@@ -105,4 +94,48 @@
   background-color: #7c00fe;
   border: none;
   color: white;
+}
+
+@media (max-width: 768px) {
+  .surveyForm {
+    padding: 5%;
+  }
+
+  .formTitle {
+    font-size: 1.8rem;
+  }
+
+  .question {
+    font-size: 1rem;
+    margin-top: 2rem;
+  }
+
+  .numbers {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .formTitle {
+    font-size: 1.6rem;
+  }
+
+  .question {
+    font-size: 0.9rem;
+  }
+
+  .numbers {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .button {
+    font-size: 0.9rem;
+    padding: 0.5rem;
+  }
+
+  .buttons {
+    flex-direction: column;
+  }
 }
